[package]
name = "fen2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# miniquad = "0.3.2"
lazy_static = "1.4.0"
macroquad = {version = "0.4.13", features = ["audio"]}
hlua = "0.3"
notify = "4.0.17"
